# vrml1tovrml2

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  pyproject.toml  vrml1tovrml2  vrml1tovrml2.py
.github/workflows/: deploy-pages.yml
examples/: sample_defs_v1.wrl  sample_defs_v2.wrl  sample_v1.wrl  sample_v2.wrl
scripts/: compare_against_legacy.py  compare_vrml_structure.py  regenerate_testset.sh
src/: cli.rs  converter.rs  error.rs  lib.rs  main.rs  model.rs  parser.rs  writer.rs
tests/: public_v1_regression.rs
tests/data/public_v1_cases/: README.md
vrml1tovrml2_pkg/: __init__.py  cli.py  common.py  converter.py  parser.py  progress.py  specs.py  writer.py
web/: app.js  index.html  styles.css
wrl/cases/ansys_test_from_ansys_1/: baseline.v2.from_exe.wrl  current.v2.from_python.wrl  input.v1.wrl
wrl/cases/sample_minimal/: baseline.v2.from_exe.wrl  current.v2.from_python.wrl  input.v1.wrl
