[package]
name = "vrml1tovrml2-rs"
version = "0.1.0"
edition = "2024"
description = "Rust-powered VRML 1.0 to VRML 2.0 conversion for Linux, WSL, CI, and GitHub Pages."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
indicatif = "0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
